// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventListStatusFilters /> renders correctly with all status 1`] = `
<div
  className="position-relative"
>
  <EventListStatusFilter__StatusButton
    aria-expanded={false}
    onClick={[Function]}
    screen="desktop"
  >
    (
    <FormattedMessage
      id="global.all"
      values={Object {}}
    />
    )
  </EventListStatusFilter__StatusButton>
  <Overlay
    animation={[Function]}
    container={
      EventListStatusFilter {
        "context": Object {},
        "getButtonMessage": [Function],
        "getPopover": [Function],
        "handleToggle": [Function],
        "props": Object {
          "screen": "desktop",
          "status": "all",
        },
        "refs": Object {},
        "setState": [Function],
        "state": Object {
          "show": false,
        },
        "target": Object {
          "current": null,
        },
        "updater": Updater {
          "_callbacks": Array [],
          "_renderer": ReactShallowRenderer {
            "_context": Object {},
            "_didScheduleRenderPhaseUpdate": false,
            "_dispatcher": Object {
              "readContext": [Function],
              "useCallback": [Function],
              "useContext": [Function],
              "useDebugValue": [Function],
              "useDeferredValue": [Function],
              "useEffect": [Function],
              "useId": [Function],
              "useImperativeHandle": [Function],
              "useInsertionEffect": [Function],
              "useLayoutEffect": [Function],
              "useMemo": [Function],
              "useReducer": [Function],
              "useRef": [Function],
              "useResponder": [Function],
              "useState": [Function],
              "useSyncExternalStore": [Function],
              "useTransition": [Function],
            },
            "_element": <EventListStatusFilter
              screen="desktop"
              status="all"
            />,
            "_firstWorkInProgressHook": null,
            "_forcedUpdate": false,
            "_idCounter": 0,
            "_instance": [Circular],
            "_isReRender": false,
            "_newState": null,
            "_numberOfReRenders": 0,
            "_renderPhaseUpdates": null,
            "_rendered": <div
              className="position-relative"
            >
              <EventListStatusFilter__StatusButton
                aria-expanded={false}
                onClick={[Function]}
                screen="desktop"
              >
                <React.Fragment>
                  (
                  <FormattedMessage
                    id="global.all"
                    values={Object {}}
                  />
                  )
                </React.Fragment>
              </EventListStatusFilter__StatusButton>
              <Overlay
                animation={[Function]}
                container={[Circular]}
                placement="bottom"
                rootClose={false}
                show={false}
                target={null}
              >
                <EventListStatusFilter__StatusPopover>
                  <form
                    onChange={[Function]}
                  >
                    <fieldset>
                      <legend
                        className="sr-only"
                      >
                        <FormattedMessage
                          id="filter-by"
                          values={Object {}}
                        />
                      </legend>
                      <Field
                        checked={true}
                        component={[Function]}
                        id="all-events"
                        name="status"
                        type="radio"
                        value="all"
                      >
                        <FormattedMessage
                          id="global.all"
                          values={Object {}}
                        />
                      </Field>
                      <Field
                        checked={false}
                        component={[Function]}
                        id="ongoing-and-future-events"
                        name="status"
                        type="radio"
                        value="ongoing-and-future"
                      >
                        <FormattedMessage
                          id="theme.show.status.future"
                          values={Object {}}
                        />
                      </Field>
                      <Field
                        checked={false}
                        component={[Function]}
                        id="finished-events"
                        name="status"
                        type="radio"
                        value="finished"
                      >
                        <FormattedMessage
                          id="finished"
                          values={Object {}}
                        />
                      </Field>
                    </fieldset>
                  </form>
                </EventListStatusFilter__StatusPopover>
              </Overlay>
            </div>,
            "_rendering": false,
            "_updater": [Circular],
            "_workInProgressHook": null,
          },
        },
      }
    }
    placement="bottom"
    rootClose={false}
    show={false}
    target={null}
  >
    <EventListStatusFilter__StatusPopover>
      <form
        onChange={[Function]}
      >
        <fieldset>
          <legend
            className="sr-only"
          >
            <FormattedMessage
              id="filter-by"
              values={Object {}}
            />
          </legend>
          <Field
            checked={true}
            component={[Function]}
            id="all-events"
            name="status"
            type="radio"
            value="all"
          >
            <FormattedMessage
              id="global.all"
              values={Object {}}
            />
          </Field>
          <Field
            checked={false}
            component={[Function]}
            id="ongoing-and-future-events"
            name="status"
            type="radio"
            value="ongoing-and-future"
          >
            <FormattedMessage
              id="theme.show.status.future"
              values={Object {}}
            />
          </Field>
          <Field
            checked={false}
            component={[Function]}
            id="finished-events"
            name="status"
            type="radio"
            value="finished"
          >
            <FormattedMessage
              id="finished"
              values={Object {}}
            />
          </Field>
        </fieldset>
      </form>
    </EventListStatusFilter__StatusPopover>
  </Overlay>
</div>
`;

exports[`<EventListStatusFilters /> renders correctly with finished status & true show state 1`] = `
<div
  className="position-relative"
>
  <EventListStatusFilter__StatusButton
    aria-expanded={true}
    onClick={[Function]}
  >
    <FormattedMessage
      id="finished"
      values={Object {}}
    />
  </EventListStatusFilter__StatusButton>
  <Overlay
    animation={[Function]}
    container={
      EventListStatusFilter {
        "context": Object {},
        "getButtonMessage": [Function],
        "getPopover": [Function],
        "handleToggle": [Function],
        "props": Object {
          "status": "finished",
        },
        "refs": Object {},
        "setState": [Function],
        "state": Object {
          "show": true,
        },
        "target": Object {
          "current": null,
        },
        "updater": Updater {
          "_callbacks": Array [],
          "_renderer": ReactShallowRenderer {
            "_context": Object {},
            "_didScheduleRenderPhaseUpdate": false,
            "_dispatcher": Object {
              "readContext": [Function],
              "useCallback": [Function],
              "useContext": [Function],
              "useDebugValue": [Function],
              "useDeferredValue": [Function],
              "useEffect": [Function],
              "useId": [Function],
              "useImperativeHandle": [Function],
              "useInsertionEffect": [Function],
              "useLayoutEffect": [Function],
              "useMemo": [Function],
              "useReducer": [Function],
              "useRef": [Function],
              "useResponder": [Function],
              "useState": [Function],
              "useSyncExternalStore": [Function],
              "useTransition": [Function],
            },
            "_element": <EventListStatusFilter
              status="finished"
            />,
            "_firstWorkInProgressHook": null,
            "_forcedUpdate": false,
            "_idCounter": 0,
            "_instance": [Circular],
            "_isReRender": false,
            "_newState": null,
            "_numberOfReRenders": 0,
            "_renderPhaseUpdates": null,
            "_rendered": <div
              className="position-relative"
            >
              <EventListStatusFilter__StatusButton
                aria-expanded={true}
                onClick={[Function]}
              >
                <FormattedMessage
                  id="finished"
                  values={Object {}}
                />
              </EventListStatusFilter__StatusButton>
              <Overlay
                animation={[Function]}
                container={[Circular]}
                placement="bottom"
                rootClose={false}
                show={true}
                target={null}
              >
                <EventListStatusFilter__StatusPopover>
                  <form
                    onChange={[Function]}
                  >
                    <fieldset>
                      <legend
                        className="sr-only"
                      >
                        <FormattedMessage
                          id="filter-by"
                          values={Object {}}
                        />
                      </legend>
                      <Field
                        checked={false}
                        component={[Function]}
                        id="all-events"
                        name="status"
                        type="radio"
                        value="all"
                      >
                        <FormattedMessage
                          id="global.all"
                          values={Object {}}
                        />
                      </Field>
                      <Field
                        checked={false}
                        component={[Function]}
                        id="ongoing-and-future-events"
                        name="status"
                        type="radio"
                        value="ongoing-and-future"
                      >
                        <FormattedMessage
                          id="theme.show.status.future"
                          values={Object {}}
                        />
                      </Field>
                      <Field
                        checked={true}
                        component={[Function]}
                        id="finished-events"
                        name="status"
                        type="radio"
                        value="finished"
                      >
                        <FormattedMessage
                          id="finished"
                          values={Object {}}
                        />
                      </Field>
                    </fieldset>
                  </form>
                </EventListStatusFilter__StatusPopover>
              </Overlay>
            </div>,
            "_rendering": false,
            "_updater": [Circular],
            "_workInProgressHook": null,
          },
        },
      }
    }
    placement="bottom"
    rootClose={false}
    show={true}
    target={null}
  >
    <EventListStatusFilter__StatusPopover>
      <form
        onChange={[Function]}
      >
        <fieldset>
          <legend
            className="sr-only"
          >
            <FormattedMessage
              id="filter-by"
              values={Object {}}
            />
          </legend>
          <Field
            checked={false}
            component={[Function]}
            id="all-events"
            name="status"
            type="radio"
            value="all"
          >
            <FormattedMessage
              id="global.all"
              values={Object {}}
            />
          </Field>
          <Field
            checked={false}
            component={[Function]}
            id="ongoing-and-future-events"
            name="status"
            type="radio"
            value="ongoing-and-future"
          >
            <FormattedMessage
              id="theme.show.status.future"
              values={Object {}}
            />
          </Field>
          <Field
            checked={true}
            component={[Function]}
            id="finished-events"
            name="status"
            type="radio"
            value="finished"
          >
            <FormattedMessage
              id="finished"
              values={Object {}}
            />
          </Field>
        </fieldset>
      </form>
    </EventListStatusFilter__StatusPopover>
  </Overlay>
</div>
`;

exports[`<EventListStatusFilters /> renders correctly with ongoing-and-future status 1`] = `
<div
  className="position-relative"
>
  <EventListStatusFilter__StatusButton
    aria-expanded={false}
    onClick={[Function]}
    screen="mobile"
  >
    <FormattedMessage
      id="theme.show.status.future"
      values={Object {}}
    />
  </EventListStatusFilter__StatusButton>
  <Overlay
    animation={[Function]}
    container={
      EventListStatusFilter {
        "context": Object {},
        "getButtonMessage": [Function],
        "getPopover": [Function],
        "handleToggle": [Function],
        "props": Object {
          "screen": "mobile",
          "status": "ongoing-and-future",
        },
        "refs": Object {},
        "setState": [Function],
        "state": Object {
          "show": false,
        },
        "target": Object {
          "current": null,
        },
        "updater": Updater {
          "_callbacks": Array [],
          "_renderer": ReactShallowRenderer {
            "_context": Object {},
            "_didScheduleRenderPhaseUpdate": false,
            "_dispatcher": Object {
              "readContext": [Function],
              "useCallback": [Function],
              "useContext": [Function],
              "useDebugValue": [Function],
              "useDeferredValue": [Function],
              "useEffect": [Function],
              "useId": [Function],
              "useImperativeHandle": [Function],
              "useInsertionEffect": [Function],
              "useLayoutEffect": [Function],
              "useMemo": [Function],
              "useReducer": [Function],
              "useRef": [Function],
              "useResponder": [Function],
              "useState": [Function],
              "useSyncExternalStore": [Function],
              "useTransition": [Function],
            },
            "_element": <EventListStatusFilter
              screen="mobile"
              status="ongoing-and-future"
            />,
            "_firstWorkInProgressHook": null,
            "_forcedUpdate": false,
            "_idCounter": 0,
            "_instance": [Circular],
            "_isReRender": false,
            "_newState": null,
            "_numberOfReRenders": 0,
            "_renderPhaseUpdates": null,
            "_rendered": <div
              className="position-relative"
            >
              <EventListStatusFilter__StatusButton
                aria-expanded={false}
                onClick={[Function]}
                screen="mobile"
              >
                <FormattedMessage
                  id="theme.show.status.future"
                  values={Object {}}
                />
              </EventListStatusFilter__StatusButton>
              <Overlay
                animation={[Function]}
                container={[Circular]}
                placement="bottom"
                rootClose={false}
                show={false}
                target={null}
              >
                <EventListStatusFilter__StatusPopover>
                  <form
                    onChange={[Function]}
                  >
                    <fieldset>
                      <legend
                        className="sr-only"
                      >
                        <FormattedMessage
                          id="filter-by"
                          values={Object {}}
                        />
                      </legend>
                      <Field
                        checked={false}
                        component={[Function]}
                        id="all-events"
                        name="status"
                        type="radio"
                        value="all"
                      >
                        <FormattedMessage
                          id="global.all"
                          values={Object {}}
                        />
                      </Field>
                      <Field
                        checked={true}
                        component={[Function]}
                        id="ongoing-and-future-events"
                        name="status"
                        type="radio"
                        value="ongoing-and-future"
                      >
                        <FormattedMessage
                          id="theme.show.status.future"
                          values={Object {}}
                        />
                      </Field>
                      <Field
                        checked={false}
                        component={[Function]}
                        id="finished-events"
                        name="status"
                        type="radio"
                        value="finished"
                      >
                        <FormattedMessage
                          id="finished"
                          values={Object {}}
                        />
                      </Field>
                    </fieldset>
                  </form>
                </EventListStatusFilter__StatusPopover>
              </Overlay>
            </div>,
            "_rendering": false,
            "_updater": [Circular],
            "_workInProgressHook": null,
          },
        },
      }
    }
    placement="bottom"
    rootClose={false}
    show={false}
    target={null}
  >
    <EventListStatusFilter__StatusPopover>
      <form
        onChange={[Function]}
      >
        <fieldset>
          <legend
            className="sr-only"
          >
            <FormattedMessage
              id="filter-by"
              values={Object {}}
            />
          </legend>
          <Field
            checked={false}
            component={[Function]}
            id="all-events"
            name="status"
            type="radio"
            value="all"
          >
            <FormattedMessage
              id="global.all"
              values={Object {}}
            />
          </Field>
          <Field
            checked={true}
            component={[Function]}
            id="ongoing-and-future-events"
            name="status"
            type="radio"
            value="ongoing-and-future"
          >
            <FormattedMessage
              id="theme.show.status.future"
              values={Object {}}
            />
          </Field>
          <Field
            checked={false}
            component={[Function]}
            id="finished-events"
            name="status"
            type="radio"
            value="finished"
          >
            <FormattedMessage
              id="finished"
              values={Object {}}
            />
          </Field>
        </fieldset>
      </form>
    </EventListStatusFilter__StatusPopover>
  </Overlay>
</div>
`;
